Log-in feature Added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <center><h1>WEB - 0.1</h1></center>
     <center><h3>GIT BRANCH , MERGE , REBASE</h3></center>
-    
 
+
+    <center><h1>login feature added.</h1></center>
 </body>
 </html>
