--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
     <center><h1>login feature added.</h1></center>
     <center><h1>search feature added.</h1></center>
+    <center><h1>profile feature added.</h1></center>
 </body>
 </html>
