Payment feature added

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <center><h1>login feature added.</h1></center>
     <center><h1>search feature added.</h1></center>
     <center><h1>profile feature added.</h1></center>
+    <center><h1>payment feature added.</h1></center>
 </body>
 </html>
