--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <center><h1>search feature added.</h1></center>
     <center><h1>profile feature added.</h1></center>
     <center><h1>payment feature added.</h1></center>
+
+    <center><h1>To-Do feature added.</h1></center>
 </body>
 </html>
