--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <center><h1>profile feature added.</h1></center>
     <center><h1>payment feature added.</h1></center>
 
-    <center><h1>To-Do feature added.</h1></center>
+    <center><h1>To-Do feature added. main</h1></center>
 </body>
 </html>
